# financial-analytics-dashboard

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  main.py
app/database/: connection.py
app/routers/: budget_router.py  expenses_router.py  export_router.py  income_router.py  overview_router.py  transactions_router.py
app/schemas/: contracts.py  entities.py
app/services/: budget_service.py  expenses_service.py  export_service.py  income_service.py  overview_service.py  transactions_service.py
app/static/: style.css
app/templates/: base.html  login.html
app/templates/budget/: summary.html
app/templates/components/: header.html  sidebar.html
app/templates/expenses/: summary.html
app/templates/income/: summary.html
app/templates/overview/: summary.html
app/templates/transactions/: form.html  list.html
docs/: PROJECT_PLAN.md  TESTS.md  sample_export.csv
docs/ai/: system_context.md
docs/process_improvements/: retro_project5.md
migrations/: init.sql
seed/: seed.py
tests/: conftest.py  test_auth.py  test_budget_service.py  test_expenses_service.py  test_export.py  test_income_service.py  test_overview_service.py  test_smoke.py  test_transactions_integration.py  test_transactions_service.py
