[project]
name = "financial-analytics-dashboard"
version = "0.0.1"
requires-python = ">=3.10"
description = "A personal finance dashboard that allows users to visualize, edit and export their financial data."

dependencies = [
    "fastapi >=0.115", 
    "uvicorn >=0.30",
    "jinja2 >=3.1",
    "asyncpg >=0.29",
    "sqlalchemy >=2.0",
    "pydantic-settings >=2.3",
    "passlib[bcrypt] >=1.7",
    "pandas >=2.2"
    ]

[project.optional-dependencies]
dev = [
    "pytest >=8.0",
    "httpx >=0.27",
    "ruff >=0.4",
]