[project]
name = "financial-analytics-dashboard"
version = "0.0.1"
requires-python = ">=3.10"
description = "A personal finance dashboard that allows users to visualize, edit and export their financial data."

dependencies = [
    "itsdangerous >=2.0",
    "python-multipart >= 0.0.9",
    "fastapi >=0.115",
    "uvicorn >=0.30",
    "jinja2 >=3.1",
    "asyncpg >=0.29",
    "sqlalchemy >=2.0",
    "pydantic-settings >=2.3",
    # IMPROVE (nit, optional): other lines in this file use `>=X.Y` without a space (e.g. `asyncpg >=0.29`).
    #   Your line has `>= 4.1` with a space. Both are valid PEP 508, but matching the existing style
    #   keeps the file consistent. Take it or leave it.
    "bcrypt >= 4.1",
    "pandas >=2.2"
    ]

[project.optional-dependencies]
dev = [
    "pytest >=8.0",
    "httpx >=0.27",
    "ruff >=0.4",
]